# singular

./: .gitignore  Cargo.toml  Dockerfile
src/: card.rs  game.rs  lib.rs  player.rs
src/game/: event.rs
static/: 404.html  game.html  game.js  index.html  index.js  lobbies.html
www/: index.html  package-lock.json  package.json  webpack.config.js
